Protecao contra pishing no target blank

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </li>
                         <li class="page_item"><a href="blog.html">Dicas &#038; Blog</a></li>
                         <li class="page_item"><a href="spartacus.html">Spartacus</a></li>
-                        <li class="page_item"><a target="_blank" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
+                        <li class="page_item"><a target="_blank" rel="noopener noreferrer" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
                     </ul>
                 </div>
             </nav>
@@ -74,9 +74,9 @@
                     <img class="alignleft" src="img/williamdev.png" alt="William Ivanski" sizes="(max-width: 298px) 100vw, 298px" data-recalc-dims="1" />
                     Sou um curitibano que dedicou boa parte de sua vida aos estudos, e que agora procura conciliar família e trabalho da melhor forma possível. Posso dizer com sinceridade que sou feliz com minha família, minha esposa, minha filha e minha profissão.
                 </p>
-                <p>Sou formado em <em>Ciência da Computação</em> pela Universidade Federal do Paraná (<a target="_blank" href="http://www.ufpr.br">UFPR</a>). Meu trabalho de conclusão de curso foi na área de Visão Computacional, onde desenvolvi um sistema para rastreamento e armazenamento de histórico de partidas de xadrez utilizando <em>webcams</em> de baixa qualidade.</p>
-                <p>De 2009 a 2012, trabalhei na empresa <a target="_blank" href="http://www.adsistem.com.br">Adsistem Sistemas Administrativos</a>, onde me especializei no desenvolvimento de relatórios dos mais variados tipos, incluindo relatórios gerenciais e de BI (<em>Business Intelligence</em>, ou Inteligência de Negócio). Também adquiri um conhecimento profundo em desenvolvimento para bancos de dados e para Web.</p>
-                <p>Desde 2012 trabalho na empresa <a target="_blank" href="http://www.planningservice.com.br">Planning Service Transfer Pricing</a>, onde adquiri muita experiência na parte de administração de bancos de dados, administração de redes e servidores Linux, e também como gerente de projetos de desenvolvimento.</p>
+                <p>Sou formado em <em>Ciência da Computação</em> pela Universidade Federal do Paraná (<a target="_blank" rel="noopener noreferrer" href="http://www.ufpr.br">UFPR</a>). Meu trabalho de conclusão de curso foi na área de Visão Computacional, onde desenvolvi um sistema para rastreamento e armazenamento de histórico de partidas de xadrez utilizando <em>webcams</em> de baixa qualidade.</p>
+                <p>De 2009 a 2012, trabalhei na empresa <a target="_blank" rel="noopener noreferrer" href="http://www.adsistem.com.br">Adsistem Sistemas Administrativos</a>, onde me especializei no desenvolvimento de relatórios dos mais variados tipos, incluindo relatórios gerenciais e de BI (<em>Business Intelligence</em>, ou Inteligência de Negócio). Também adquiri um conhecimento profundo em desenvolvimento para bancos de dados e para Web.</p>
+                <p>Desde 2012 trabalho na empresa <a target="_blank" rel="noopener noreferrer" href="http://www.planningservice.com.br">Planning Service Transfer Pricing</a>, onde adquiri muita experiência na parte de administração de bancos de dados, administração de redes e servidores Linux, e também como gerente de projetos de desenvolvimento.</p>
                 <p>Agradeço a Deus e à minha família, sem a qual todas as minhas conquistas técnicas e profissionais teriam sido muito mais difíceis. Minha esposa chama-se Pollyanna, e temos uma filha chamada Alice. A experiência de estar casado e ser pai é impressionante, muito mais valiosa do que qualquer diploma ou reconhecimento profissional. Sou muito grato a toda a paz, todo carinho e todo o amor que essas duas almas me proporcionam todos os dias. E com isso elas me fazem crescer, querer ser cada dia um marido melhor, um pai melhor, e tudo isso acaba se refletindo em como eu sou para a minha profissão e para a própria sociedade.</p>
             </article>
             <!--<hr class="mh-separator">-->
@@ -87,7 +87,7 @@
                 <ul class="mh-rp-widget widget-list">
                     <li class="rp-widget-item"><a href="curso.html">Curso de Programação C#</a></li>
                     <li class="rp-widget-item"><a href="spartacus.html">Spartacus</a></li>
-                    <li class="rp-widget-item"><a target="_blank" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
                 </ul>
             </div>
             <div class="sb-widget clearfix">
@@ -100,16 +100,16 @@
             <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Parceiros</span></h4>
                 <ul class="mh-rp-widget widget-list">
-                    <li class="rp-widget-item"><a target="_blank" href="http://www.planningservice.com.br">Planning Service Transfer Pricing</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="http://www.planningservice.com.br">Planning Service Transfer Pricing</a></li>
                 </ul>
             </div>
             <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Contato</span></h4>
                 <a href="mailto:william.ivanski@gmail.com"><img src="img/email.png" alt="email" /></a>
-                <a href="https://www.github.com/wind39" target="_blank"><img src="img/github.png" alt="github" /></a>
-                <a href="https://www.twitter.com/WilliamIvanski" target="_blank"><img src="img/twitter.png" alt="twitter" /></a>
-                <a href="https://plus.google.com/+WilliamIvanski" target="_blank"><img src="img/googleplus.png" alt="googleplus" /></a>
-                <a href="https://www.facebook.com/william.ivanski" target="_blank"><img src="img/facebook.png" alt="facebook" /></a>
+                <a href="https://www.github.com/wind39" target="_blank" rel="noopener noreferrer"><img src="img/github.png" alt="github" /></a>
+                <a href="https://www.twitter.com/WilliamIvanski" target="_blank" rel="noopener noreferrer"><img src="img/twitter.png" alt="twitter" /></a>
+                <a href="https://plus.google.com/+WilliamIvanski" target="_blank" rel="noopener noreferrer"><img src="img/googleplus.png" alt="googleplus" /></a>
+                <a href="https://www.facebook.com/william.ivanski" target="_blank" rel="noopener noreferrer"><img src="img/facebook.png" alt="facebook" /></a>
             </div>
         </aside>
     </div>
