--- a/modulo3.html
+++ b/modulo3.html
@@ -57,7 +57,7 @@
                         </li>
                         <li class="page_item"><a href="blog.html">Dicas &#038; Blog</a></li>
                         <li class="page_item"><a href="spartacus.html">Spartacus</a></li>
-                        <li class="page_item"><a target="_blank" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
+                        <li class="page_item"><a target="_blank" rel="noopener noreferrer" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
                     </ul>
                 </div>
             </nav>
@@ -77,7 +77,7 @@
                     <li>Conexão com a internet para assistir as aulas ao vivo ou pelo Youtube.</li>
                     <li>Conhecer o conteúdo do <a href="modulo2.html">Módulo II</a>.</li>
                 </ul>    
-                <p>Repositório de exemplos e soluções dos exercícios no <a target="_blank" href="https://github.com/wind39/curso_modulo3">Github</a>.
+                <p>Repositório de exemplos e soluções dos exercícios no <a target="_blank" rel="noopener noreferrer" href="https://github.com/wind39/curso_modulo3">Github</a>.
                 <p>Cronograma:</p>
                 <table>
                     <!-- capitulo 1 -->
@@ -86,64 +86,64 @@
                         <td rowspan=1><a href="curso/modulo3capitulo1.pptx">Slides</a></td>
                         <td rowspan=1></td>
                         <td rowspan=1></td>
-                        <td><a target="_blank" href="http://youtu.be/9NQsK-0c66w">Videoaula 05/03/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="http://youtu.be/9NQsK-0c66w">Videoaula 05/03/2016</a></td>
                     </tr>
 
                     <!-- capitulo 2 -->
                     <tr>
                         <td rowspan=6>Cap&iacute;tulo 2 - SQLite</td>
                         <td rowspan=6><a href="curso/modulo3capitulo2.pptx">Slides</a></td>
-                        <td rowspan=6><a target="_blank" href="curso/modulo3lista2.html">Exerc&iacute;cios</a></td>
-                        <td rowspan=6><a target="_blank" href="curso/modulo3respostas2.html">Respostas</a></td>
-                        <td><a target="_blank" href="https://youtu.be/AXiLLwP8Y-0">Videoaula 12/03/2016</a></td>
+                        <td rowspan=6><a target="_blank" rel="noopener noreferrer" href="curso/modulo3lista2.html">Exerc&iacute;cios</a></td>
+                        <td rowspan=6><a target="_blank" rel="noopener noreferrer" href="curso/modulo3respostas2.html">Respostas</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/AXiLLwP8Y-0">Videoaula 12/03/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/tcU1mrQFeLU">Videoaula 19/03/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/tcU1mrQFeLU">Videoaula 19/03/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/ZFUI7WlByfg">Videoaula 26/03/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/ZFUI7WlByfg">Videoaula 26/03/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/IAJWxIPlSWs">Videoaula 09/04/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/IAJWxIPlSWs">Videoaula 09/04/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/ICIJ2Foz1jI">Videoaula 16/04/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/ICIJ2Foz1jI">Videoaula 16/04/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/sHuuYOAEJLM">Videoaula 23/04/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/sHuuYOAEJLM">Videoaula 23/04/2016</a></td>
                     </tr>
 
                     <!-- capitulo 3 -->
                     <tr>
                         <td rowspan=7>Cap&iacute;tulo 3 - Linguagem SQL</td>
                         <td rowspan=7><a href="curso/modulo3capitulo3.pptx">Slides</a></td>
-                        <td rowspan=7><a target="_blank" href="curso/modulo3lista3.html">Exerc&iacute;cios</a></td>
-                        <td rowspan=7><a target="_blank" href="curso/modulo3respostas3.html">Respostas</a></td>
-                        <td><a target="_blank" href="https://youtu.be/qxIOr7NKfwg">Videoaula 30/04/2016</a></td>
+                        <td rowspan=7><a target="_blank" rel="noopener noreferrer" href="curso/modulo3lista3.html">Exerc&iacute;cios</a></td>
+                        <td rowspan=7><a target="_blank" rel="noopener noreferrer" href="curso/modulo3respostas3.html">Respostas</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/qxIOr7NKfwg">Videoaula 30/04/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/zl600ckFFKM">Videoaula 07/05/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/zl600ckFFKM">Videoaula 07/05/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/BA40gwsFOaw">Videoaula 14/05/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/BA40gwsFOaw">Videoaula 14/05/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/ErLBO9FJZ9Y">Videoaula 21/05/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/ErLBO9FJZ9Y">Videoaula 21/05/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/hViGVStWcvk">Videoaula 04/06/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/hViGVStWcvk">Videoaula 04/06/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/wahJeweC498">Videoaula 18/06/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/wahJeweC498">Videoaula 18/06/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/k-RsiW6GnwE">Videoaula 02/07/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/k-RsiW6GnwE">Videoaula 02/07/2016</a></td>
                     </tr>
 
                     <!-- avaliacao 1 -->
                     <tr>
                         <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 1</td>
-                        <td rowspan=1><a target="_blank" href="curso/modulo3prova1.html">Quest&otilde;es</a></td>
+                        <td rowspan=1><a target="_blank" rel="noopener noreferrer" href="curso/modulo3prova1.html">Quest&otilde;es</a></td>
                     </tr>
 
                     <!-- capitulo 4 -->
@@ -152,13 +152,13 @@
                         <td rowspan=3>Slides</td>
                         <td rowspan=3>Exerc&iacute;cios</td>
                         <td rowspan=3>Respostas</td>
-                        <td><a target="_blank" href="https://youtu.be/1HD86yEduqU">Videoaula 30/07/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/1HD86yEduqU">Videoaula 30/07/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/NsyT7WEU0y8">Videoaula 06/08/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/NsyT7WEU0y8">Videoaula 06/08/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/_CFnfwF76x8">Videoaula 13/08/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/_CFnfwF76x8">Videoaula 13/08/2016</a></td>
                     </tr>
 
                     <!-- capitulo 5 -->
@@ -200,19 +200,19 @@
             <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Links Úteis</span></h4>
                 <ul class="mh-rp-widget widget-list">
-                    <li class="rp-widget-item"><a target="_blank" href="https://www.youtube.com/channel/UCeONQR7dcUYXXlv59kHu1mA">Canal no Youtube</a></li>
-                    <li class="rp-widget-item"><a target="_blank" href="https://plus.google.com/u/0/communities/102417267229322909418">Comunidade no Google+</a></li>
-                    <li class="rp-widget-item"><a target="_blank" href="https://www.facebook.com/groups/1729461200615461/">Grupo no Facebook</a></li>
-                    <li class="rp-widget-item"><a target="_blank" href="https://www.reddit.com/r/cursoprogramacao/">Subreddit</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UCeONQR7dcUYXXlv59kHu1mA">Canal no Youtube</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://plus.google.com/u/0/communities/102417267229322909418">Comunidade no Google+</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/groups/1729461200615461/">Grupo no Facebook</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://www.reddit.com/r/cursoprogramacao/">Subreddit</a></li>
                 </ul>
             </div>
             <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Contato</span></h4>
                 <a href="mailto:william.ivanski@gmail.com"><img src="img/email.png" alt="email" /></a>
-                <a href="https://www.github.com/wind39" target="_blank"><img src="img/github.png" alt="github" /></a>
-                <a href="https://www.twitter.com/WilliamIvanski" target="_blank"><img src="img/twitter.png" alt="twitter" /></a>
-                <a href="https://plus.google.com/+WilliamIvanski" target="_blank"><img src="img/googleplus.png" alt="googleplus" /></a>
-                <a href="https://www.facebook.com/william.ivanski" target="_blank"><img src="img/facebook.png" alt="facebook" /></a>
+                <a href="https://www.github.com/wind39" target="_blank" rel="noopener noreferrer"><img src="img/github.png" alt="github" /></a>
+                <a href="https://www.twitter.com/WilliamIvanski" target="_blank" rel="noopener noreferrer"><img src="img/twitter.png" alt="twitter" /></a>
+                <a href="https://plus.google.com/+WilliamIvanski" target="_blank" rel="noopener noreferrer"><img src="img/googleplus.png" alt="googleplus" /></a>
+                <a href="https://www.facebook.com/william.ivanski" target="_blank" rel="noopener noreferrer"><img src="img/facebook.png" alt="facebook" /></a>
             </div>
         </aside>
     </div>
