--- a/spartacus.html
+++ b/spartacus.html
@@ -57,7 +57,7 @@
                         </li>
                         <li class="page_item"><a href="blog.html">Dicas &#038; Blog</a></li>
                         <li class="page_item"><a href="spartacus.html">Spartacus</a></li>
-                        <li class="page_item"><a target="_blank" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
+                        <li class="page_item"><a target="_blank" rel="noopener noreferrer" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
                     </ul>
                 </div>
             </nav>
@@ -89,19 +89,19 @@
             <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Links Úteis</span></h4>
                 <ul class="mh-rp-widget widget-list">
-                    <li class="rp-widget-item"><a target="_blank" href="https://github.com/wind39/spartacus">Projeto no GitHub</a></li>
-                    <li class="rp-widget-item"><a target="_blank" href="https://github.com/wind39/spartacus/wiki">Wiki no GitHub</a></li>
-                    <li class="rp-widget-item"><a target="_blank" href="https://www.nuget.org/packages/Spartacus">Pacote Nuget</a></li>
-                    <li class="rp-widget-item"><a target="_blank" href="https://www.reddit.com/r/spartacuslibrary/">Discussão no Reddit</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://github.com/wind39/spartacus">Projeto no GitHub</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://github.com/wind39/spartacus/wiki">Wiki no GitHub</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://www.nuget.org/packages/Spartacus">Pacote Nuget</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://www.reddit.com/r/spartacuslibrary/">Discussão no Reddit</a></li>
                 </ul>
             </div>
             <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Contato</span></h4>
                 <a href="mailto:william.ivanski@gmail.com"><img src="img/email.png" alt="email" /></a>
-                <a href="https://www.github.com/wind39" target="_blank"><img src="img/github.png" alt="github" /></a>
-                <a href="https://www.twitter.com/WilliamIvanski" target="_blank"><img src="img/twitter.png" alt="twitter" /></a>
-                <a href="https://plus.google.com/+WilliamIvanski" target="_blank"><img src="img/googleplus.png" alt="googleplus" /></a>
-                <a href="https://www.facebook.com/william.ivanski" target="_blank"><img src="img/facebook.png" alt="facebook" /></a>
+                <a href="https://www.github.com/wind39" target="_blank" rel="noopener noreferrer"><img src="img/github.png" alt="github" /></a>
+                <a href="https://www.twitter.com/WilliamIvanski" target="_blank" rel="noopener noreferrer"><img src="img/twitter.png" alt="twitter" /></a>
+                <a href="https://plus.google.com/+WilliamIvanski" target="_blank" rel="noopener noreferrer"><img src="img/googleplus.png" alt="googleplus" /></a>
+                <a href="https://www.facebook.com/william.ivanski" target="_blank" rel="noopener noreferrer"><img src="img/facebook.png" alt="facebook" /></a>
             </div>
         </aside>
     </div>
