--- a/curso.html
+++ b/curso.html
@@ -57,7 +57,7 @@
                         </li>
                         <li class="page_item"><a href="blog.html">Dicas &#038; Blog</a></li>
                         <li class="page_item"><a href="spartacus.html">Spartacus</a></li>
-                        <li class="page_item"><a target="_blank" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
+                        <li class="page_item"><a target="_blank" rel="noopener noreferrer" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
                     </ul>
                 </div>
             </nav>
@@ -83,7 +83,7 @@
                     <li>C# avançado (memória virtual e estruturas de dados)</li>
                 </ul>
                 <p>Videoaulas ao vivo pelo Google Hangouts, 1x por semana. As aulas são gravadas e publicadas na íntegra no Youtube.</p>
-                <p>Participe da nossa <a target="_blank" href="https://plus.google.com/u/0/communities/102417267229322909418">comunidade no Google+</a>.</p>
+                <p>Participe da nossa <a target="_blank" rel="noopener noreferrer" href="https://plus.google.com/u/0/communities/102417267229322909418">comunidade no Google+</a>.</p>
             </article>
             <hr class="mh-separator">
             <h1 id="faq" class="page-title">Perguntas Frequentes</h1>
@@ -164,19 +164,19 @@
             <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Links Úteis</span></h4>
                 <ul class="mh-rp-widget widget-list">
-                    <li class="rp-widget-item"><a target="_blank" href="https://www.youtube.com/channel/UCeONQR7dcUYXXlv59kHu1mA">Canal no Youtube</a></li>
-                    <li class="rp-widget-item"><a target="_blank" href="https://plus.google.com/u/0/communities/102417267229322909418">Comunidade no Google+</a></li>
-                    <li class="rp-widget-item"><a target="_blank" href="https://www.facebook.com/groups/1729461200615461/">Grupo no Facebook</a></li>
-                    <li class="rp-widget-item"><a target="_blank" href="https://www.reddit.com/r/cursoprogramacao/">Subreddit</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UCeONQR7dcUYXXlv59kHu1mA">Canal no Youtube</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://plus.google.com/u/0/communities/102417267229322909418">Comunidade no Google+</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/groups/1729461200615461/">Grupo no Facebook</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://www.reddit.com/r/cursoprogramacao/">Subreddit</a></li>
                 </ul>
             </div>
             <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Contato</span></h4>
                 <a href="mailto:william.ivanski@gmail.com"><img src="img/email.png" alt="email" /></a>
-                <a href="https://www.github.com/wind39" target="_blank"><img src="img/github.png" alt="github" /></a>
-                <a href="https://www.twitter.com/WilliamIvanski" target="_blank"><img src="img/twitter.png" alt="twitter" /></a>
-                <a href="https://plus.google.com/+WilliamIvanski" target="_blank"><img src="img/googleplus.png" alt="googleplus" /></a>
-                <a href="https://www.facebook.com/william.ivanski" target="_blank"><img src="img/facebook.png" alt="facebook" /></a>
+                <a href="https://www.github.com/wind39" target="_blank" rel="noopener noreferrer"><img src="img/github.png" alt="github" /></a>
+                <a href="https://www.twitter.com/WilliamIvanski" target="_blank" rel="noopener noreferrer"><img src="img/twitter.png" alt="twitter" /></a>
+                <a href="https://plus.google.com/+WilliamIvanski" target="_blank" rel="noopener noreferrer"><img src="img/googleplus.png" alt="googleplus" /></a>
+                <a href="https://www.facebook.com/william.ivanski" target="_blank" rel="noopener noreferrer"><img src="img/facebook.png" alt="facebook" /></a>
             </div>
         </aside>
     </div>
