--- a/modulo2.html
+++ b/modulo2.html
@@ -57,7 +57,7 @@
                         </li>
                         <li class="page_item"><a href="blog.html">Dicas &#038; Blog</a></li>
                         <li class="page_item"><a href="spartacus.html">Spartacus</a></li>
-                        <li class="page_item"><a target="_blank" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
+                        <li class="page_item"><a target="_blank" rel="noopener noreferrer" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
                     </ul>
                 </div>
             </nav>
@@ -77,103 +77,103 @@
                     <li>Conexão com a internet para assistir as aulas ao vivo ou pelo Youtube.</li>
                     <li>Conhecer o conteúdo do <a href="modulo1.html">Módulo I</a>.</li>
                 </ul>
-                <p>Repositório de soluções dos exercícios no <a target="_blank" href="https://github.com/wind39/curso_modulo2">Github</a>.
+                <p>Repositório de soluções dos exercícios no <a target="_blank" rel="noopener noreferrer" href="https://github.com/wind39/curso_modulo2">Github</a>.
                 <p>Cronograma:</p>
                 <table>
                     <!-- capitulo 1 -->
                     <tr>
                         <td rowspan=6>Cap&iacute;tulo 1 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
                         <td rowspan=6><a href="curso/modulo2capitulo1.pptx">Slides</a></td>
-                        <td rowspan=6><a target="_blank" href="curso/modulo2lista1.html">Exerc&iacute;cios</a></td>
-                        <td rowspan=6><a target="_blank" href="curso/modulo2respostas1.html">Respostas</a></td>
-                        <td><a target="_blank" href="https://youtu.be/g465hxGKkzk">Videoaula 27/06/2015</a></td>
+                        <td rowspan=6><a target="_blank" rel="noopener noreferrer" href="curso/modulo2lista1.html">Exerc&iacute;cios</a></td>
+                        <td rowspan=6><a target="_blank" rel="noopener noreferrer" href="curso/modulo2respostas1.html">Respostas</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/g465hxGKkzk">Videoaula 27/06/2015</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/QE6Qfl92dc8">Videoaula 04/07/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/QE6Qfl92dc8">Videoaula 04/07/2015</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/hXKksJJx3BQ">Videoaula 11/07/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/hXKksJJx3BQ">Videoaula 11/07/2015</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/f8_8r48Isog">Videoaula 18/07/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/f8_8r48Isog">Videoaula 18/07/2015</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/UZEw1CsvYeg">Videoaula 01/08/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/UZEw1CsvYeg">Videoaula 01/08/2015</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/3SYI9HD3AMs">Videoaula 08/08/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/3SYI9HD3AMs">Videoaula 08/08/2015</a></td>
                     </tr>
 
                     <!-- capitulo 2 -->
                     <tr>
                         <td rowspan=2>Cap&iacute;tulo 2 - Bibliotecas</td>
                         <td rowspan=2><a href="curso/modulo2capitulo2.pptx">Slides</a></td>
-                        <td rowspan=2><a target="_blank" href="curso/modulo2lista2.html">Exerc&iacute;cios</a></td>
-                        <td rowspan=2><a target="_blank" href="curso/modulo2respostas2.html">Respostas</a></td>
-                        <td><a target="_blank" href="https://youtu.be/1DTjrreHiD4">Videoaula 15/08/2015</a></td>
+                        <td rowspan=2><a target="_blank" rel="noopener noreferrer" href="curso/modulo2lista2.html">Exerc&iacute;cios</a></td>
+                        <td rowspan=2><a target="_blank" rel="noopener noreferrer" href="curso/modulo2respostas2.html">Respostas</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/1DTjrreHiD4">Videoaula 15/08/2015</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/Wf7jv7sFDwU">Videoaula 22/08/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/Wf7jv7sFDwU">Videoaula 22/08/2015</a></td>
                     </tr>
 
                     <!-- capitulo 3 -->
                     <tr>
                         <td rowspan=4>Cap&iacute;tulo 3 - Manipula&ccedil;&atilde;o de Arquivos</td>
                         <td rowspan=4><a href="curso/modulo2capitulo3.pptx">Slides</a></td>
-                        <td rowspan=4><a target="_blank" href="curso/modulo2lista3.html">Exerc&iacute;cios</a></td>
-                        <td rowspan=4><a target="_blank" href="curso/modulo2respostas3.html">Respostas</a></td>
-                        <td><a target="_blank" href="https://youtu.be/YpxBgYnPNuU">Videoaula 29/08/2015</a></td>
+                        <td rowspan=4><a target="_blank" rel="noopener noreferrer" href="curso/modulo2lista3.html">Exerc&iacute;cios</a></td>
+                        <td rowspan=4><a target="_blank" rel="noopener noreferrer" href="curso/modulo2respostas3.html">Respostas</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/YpxBgYnPNuU">Videoaula 29/08/2015</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/kgRpxfOJGJw">Videoaula 05/09/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/kgRpxfOJGJw">Videoaula 05/09/2015</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/RcZIofxZtAU">Videoaula 12/09/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/RcZIofxZtAU">Videoaula 12/09/2015</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/955C06ibMRY">Videoaula 20/09/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/955C06ibMRY">Videoaula 20/09/2015</a></td>
                     </tr>
 
                     <!-- avaliacao 1 -->
                     <tr>
                         <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 1</td>
-                        <td rowspan=1><a target="_blank" href="curso/modulo2prova1.html">Quest&otilde;es</a></td>
+                        <td rowspan=1><a target="_blank" rel="noopener noreferrer" href="curso/modulo2prova1.html">Quest&otilde;es</a></td>
                     </tr>
 
                     <!-- capitulo 4 -->
                     <tr>
                         <td rowspan=3>Cap&iacute;tulo 4 - Primeiro Programa Completo no Console</td>
                         <td rowspan=3><a href="curso/modulo2capitulo4.ppt">Slides</a></td>
-                        <td rowspan=3><a target="_blank" href="curso/modulo2lista4.html">Exerc&iacute;cios</a></td>
+                        <td rowspan=3><a target="_blank" rel="noopener noreferrer" href="curso/modulo2lista4.html">Exerc&iacute;cios</a></td>
                         <td rowspan=3>Respostas</td>
-                        <td><a target="_blank" href="https://youtu.be/qngqXliyNHs">Videoaula 03/10/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/qngqXliyNHs">Videoaula 03/10/2015</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/xvSqzCqTWaE">Videoaula 10/10/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/xvSqzCqTWaE">Videoaula 10/10/2015</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/sBDY9cqe1tE">Videoaula 31/10/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/sBDY9cqe1tE">Videoaula 31/10/2015</a></td>
                     </tr>
 
                     <!-- capitulo 5 -->
                     <tr>
                         <td rowspan=3>Cap&iacute;tulo 5 - Interface Gr&aacute;fica</td>
                         <td rowspan=3><a href="curso/modulo2capitulo5.ppt">Slides</a></td>
-                        <td rowspan=3><a target="_blank" href="curso/modulo2lista5.html">Exerc&iacute;cios</a></td>
+                        <td rowspan=3><a target="_blank" rel="noopener noreferrer" href="curso/modulo2lista5.html">Exerc&iacute;cios</a></td>
                         <td rowspan=3>Respostas</td>
-                        <td><a target="_blank" href="https://youtu.be/mfge0z6LQG4">Videoaula 07/11/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/mfge0z6LQG4">Videoaula 07/11/2015</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/Q9SHSWEOmxI">Videoaula 14/11/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/Q9SHSWEOmxI">Videoaula 14/11/2015</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" href="https://youtu.be/xXjisNuzFv8">Videoaula 28/11/2015</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/xXjisNuzFv8">Videoaula 28/11/2015</a></td>
                     </tr>
 
                     <!-- avaliacao 2 -->
                     <tr>
                         <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 2</td>
-                        <td rowspan=1><a target="_blank" href="curso/modulo2prova2.html">Quest&otilde;es</a></td>
+                        <td rowspan=1><a target="_blank" rel="noopener noreferrer" href="curso/modulo2prova2.html">Quest&otilde;es</a></td>
                     </tr>
                 </table>
             </article>
@@ -200,19 +200,19 @@
             <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Links Úteis</span></h4>
                 <ul class="mh-rp-widget widget-list">
-                    <li class="rp-widget-item"><a target="_blank" href="https://www.youtube.com/channel/UCeONQR7dcUYXXlv59kHu1mA">Canal no Youtube</a></li>
-                    <li class="rp-widget-item"><a target="_blank" href="https://plus.google.com/u/0/communities/102417267229322909418">Comunidade no Google+</a></li>
-                    <li class="rp-widget-item"><a target="_blank" href="https://www.facebook.com/groups/1729461200615461/">Grupo no Facebook</a></li>
-                    <li class="rp-widget-item"><a target="_blank" href="https://www.reddit.com/r/cursoprogramacao/">Subreddit</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UCeONQR7dcUYXXlv59kHu1mA">Canal no Youtube</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://plus.google.com/u/0/communities/102417267229322909418">Comunidade no Google+</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/groups/1729461200615461/">Grupo no Facebook</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="https://www.reddit.com/r/cursoprogramacao/">Subreddit</a></li>
                 </ul>
             </div>
             <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Contato</span></h4>
                 <a href="mailto:william.ivanski@gmail.com"><img src="img/email.png" alt="email" /></a>
-                <a href="https://www.github.com/wind39" target="_blank"><img src="img/github.png" alt="github" /></a>
-                <a href="https://www.twitter.com/WilliamIvanski" target="_blank"><img src="img/twitter.png" alt="twitter" /></a>
-                <a href="https://plus.google.com/+WilliamIvanski" target="_blank"><img src="img/googleplus.png" alt="googleplus" /></a>
-                <a href="https://www.facebook.com/william.ivanski" target="_blank"><img src="img/facebook.png" alt="facebook" /></a>
+                <a href="https://www.github.com/wind39" target="_blank" rel="noopener noreferrer"><img src="img/github.png" alt="github" /></a>
+                <a href="https://www.twitter.com/WilliamIvanski" target="_blank" rel="noopener noreferrer"><img src="img/twitter.png" alt="twitter" /></a>
+                <a href="https://plus.google.com/+WilliamIvanski" target="_blank" rel="noopener noreferrer"><img src="img/googleplus.png" alt="googleplus" /></a>
+                <a href="https://www.facebook.com/william.ivanski" target="_blank" rel="noopener noreferrer"><img src="img/facebook.png" alt="facebook" /></a>
             </div>
         </aside>
     </div>
