--- a/modulo3.html
+++ b/modulo3.html
@@ -154,10 +154,10 @@
 
                     <!-- capitulo 4 -->
                     <tr>
-                        <td rowspan=4>Cap&iacute;tulo 4 - Spartacus</td>
-                        <td rowspan=4>Slides</td>
-                        <td rowspan=4>Exerc&iacute;cios</td>
-                        <td rowspan=4>Respostas</td>
+                        <td rowspan=5>Cap&iacute;tulo 4 - Spartacus</td>
+                        <td rowspan=5>Slides</td>
+                        <td rowspan=5>Exerc&iacute;cios</td>
+                        <td rowspan=5>Respostas</td>
                         <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/1HD86yEduqU">Videoaula 30/07/2016</a></td>
                     </tr>
                     <tr>
@@ -167,7 +167,10 @@
                         <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/_CFnfwF76x8">Videoaula 13/08/2016</a></td>
                     </tr>
                     <tr>
-                        <td><a target="_blank" rel="noopener noreferrer" href="http://youtu.be/Xb7cMrTaXDM">Videoaula 27/08/2016</a></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/Xb7cMrTaXDM">Videoaula 27/08/2016</a></td>
+                    </tr>
+                    <tr>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/ZKBIaakPxW8﻿">Videoaula 03/09/2016</a></td>
                     </tr>
 
                     <!-- capitulo 5 -->
