Correcao de link

--- a/blog.html
+++ b/blog.html
@@ -107,7 +107,7 @@
             <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Conteúdo</span></h4>
                 <ul class="mh-rp-widget widget-list">
-                    <li class="rp-widget-item"><a href="post20160905.html">Corrigindo ou removendo painéis no KDE Plasma 5</a></li>
+                    <li class="rp-widget-item"><a href="blog/post20160905.html">Corrigindo ou removendo painéis no KDE Plasma 5</a></li>
                     <li class="rp-widget-item"><a href="blog/post20160502.html">Conectando ao wifi pelo terminal</a></li>
                     <li class="rp-widget-item"><a href="blog/post20151026.html">Compilando Mono e XSP no Linux</a></li>
                 </ul>
