--- a/modulo3.html
+++ b/modulo3.html
@@ -154,10 +154,10 @@
 
                     <!-- capitulo 4 -->
                     <tr>
-                        <td rowspan=5>Cap&iacute;tulo 4 - Spartacus</td>
-                        <td rowspan=5>Slides</td>
-                        <td rowspan=5>Exerc&iacute;cios</td>
-                        <td rowspan=5>Respostas</td>
+                        <td rowspan=6>Cap&iacute;tulo 4 - Spartacus</td>
+                        <td rowspan=6><a href="curso/modulo3capitulo4.pptx">Slides</a></td>
+                        <td rowspan=6><a target="_blank" rel="noopener noreferrer" href="curso/modulo3lista4.html">Exerc&iacute;cios</a></td></td>
+                        <td rowspan=6>Respostas</td>
                         <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/1HD86yEduqU">Videoaula 30/07/2016</a></td>
                     </tr>
                     <tr>
@@ -171,6 +171,9 @@
                     </tr>
                     <tr>
                         <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/ZKBIaakPxW8﻿">Videoaula 03/09/2016</a></td>
+                    </tr>
+                    <tr>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/8UAewoEVOx0">Videoaula 10/09/2016</a></td>
                     </tr>
 
                     <!-- capitulo 5 -->
