--- a/modulo3.html
+++ b/modulo3.html
@@ -154,10 +154,10 @@
 
                     <!-- capitulo 4 -->
                     <tr>
-                        <td rowspan=7>Cap&iacute;tulo 4 - Spartacus</td>
-                        <td rowspan=7><a href="curso/modulo3capitulo4.pptx">Slides</a></td>
-                        <td rowspan=7><a target="_blank" rel="noopener noreferrer" href="curso/modulo3lista4.html">Exerc&iacute;cios</a></td></td>
-                        <td rowspan=7>Respostas</td>
+                        <td rowspan=8>Cap&iacute;tulo 4 - Spartacus</td>
+                        <td rowspan=8><a href="curso/modulo3capitulo4.pptx">Slides</a></td>
+                        <td rowspan=8><a target="_blank" rel="noopener noreferrer" href="curso/modulo3lista4.html">Exerc&iacute;cios</a></td></td>
+                        <td rowspan=8><a target="_blank" rel="noopener noreferrer" href="curso/modulo3respostas4.html">Respostas</a></td>
                         <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/1HD86yEduqU">Videoaula 30/07/2016</a></td>
                     </tr>
                     <tr>
@@ -178,6 +178,9 @@
                     <tr>
                         <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/TRLk1c1qBKk">Videoaula 17/09/2016</a></td>
                     </tr>
+					<tr>
+						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/2Hu5EN6C0gc﻿">Videoaula 24/09/2016</a></td>
+					</tr>
 
                     <!-- capitulo 5 -->
                     <tr>
