--- a/modulo3.html
+++ b/modulo3.html
@@ -181,6 +181,9 @@
 					<tr>
 						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/2Hu5EN6C0gc﻿">Videoaula 24/09/2016</a></td>
 					</tr>
+					<tr>
+						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/luRRrx215dI﻿">Videoaula 01/10/2016</a></td>
+					</tr>
 
                     <!-- capitulo 5 -->
                     <tr>
