--- a/modulo3.html
+++ b/modulo3.html
@@ -184,14 +184,17 @@
 
                     <!-- capitulo 5 -->
                     <tr>
-                        <td rowspan=2>Cap&iacute;tulo 5 - PostgreSQL</td>
-                        <td rowspan=2><a href="curso/modulo3capitulo5.pptx">Slides</a></td>
-                        <td rowspan=2>Exerc&iacute;cios</td>
-                        <td rowspan=2>Respostas</td>
+                        <td rowspan=3>Cap&iacute;tulo 5 - PostgreSQL</td>
+                        <td rowspan=3><a href="curso/modulo3capitulo5.pptx">Slides</a></td>
+                        <td rowspan=3>Exerc&iacute;cios</td>
+                        <td rowspan=3>Respostas</td>
                         <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/luRRrx215dI﻿">Videoaula 01/10/2016</a></td>
 					</tr>
 					<tr>
 						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/8tTXwVlzr-o">Videoaula 08/10/2016</a></td>
+					</tr>
+					<tr>
+						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/vgl3tschFFY">Videoaula 15/10/2016</a></td>
 					</tr>
 
                     <!-- avaliacao 2 -->
