--- a/curso/modulo3lista5.html
+++ b/curso/modulo3lista5.html
@@ -52,6 +52,15 @@
   <p>
    5) Crie um script <b><tt>.sh</tt></b> ou <b><tt>.bat</tt></b> para realizar o backup do banco <b><tt>employees</tt></b> com <em>pg_dump</em>. Agende o backup para ser feito todos os dias às 01:00 hrs, e devem ser mantidas cópias dos últimos 30 dias.
   </p>
+  <p>
+   6) Instale o pg_activity.
+  </p>
+  <p>
+   7) Instale o pgbench. Crie um banco de dados com 1 milhão de registros na maior tabela. Rode um experimento com 50 conexões simultâneas e 150 transações por conexão.
+  </p>
+  <p>
+   8) Instale o pgbadger e rode-o. Visualise as consultas do experimento do exercício anterior na página web gerada.
+  </p>
   <hr/>
  </body>
 </html>
