--- a/modulo3.html
+++ b/modulo3.html
@@ -184,11 +184,11 @@
 
                     <!-- capitulo 5 -->
                     <tr>
-                        <td rowspan=4>Cap&iacute;tulo 5 - PostgreSQL</td>
-                        <td rowspan=4><a href="curso/modulo3capitulo5.pptx">Slides</a></td>
-                        <td rowspan=4>Exerc&iacute;cios</td>
-                        <td rowspan=4>Respostas</td>
-                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/luRRrx215dI﻿">Videoaula 01/10/2016</a></td>
+                        <td rowspan=5>Cap&iacute;tulo 5 - PostgreSQL</td>
+                        <td rowspan=5><a href="curso/modulo3capitulo5.pptx">Slides</a></td>
+                        <td rowspan=5><a target="_blank" rel="noopener noreferrer" href="curso/modulo3lista5.html">Exerc&iacute;cios</a></td>
+                        <td rowspan=5>Respostas</td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/luRRrx215dI">Videoaula 01/10/2016</a></td>
 					</tr>
 					<tr>
 						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/8tTXwVlzr-o">Videoaula 08/10/2016</a></td>
@@ -198,6 +198,9 @@
 					</tr>
 					<tr>
 						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/jEnG-QaqT1U">Videoaula 22/10/2016</a></td>
+					</tr>
+					<tr>
+						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/9nb2ptmM7v8">Videoaula 29/10/2016</a></td>
 					</tr>
 
                     <!-- avaliacao 2 -->
