--- a/modulo3.html
+++ b/modulo3.html
@@ -184,10 +184,10 @@
 
                     <!-- capitulo 5 -->
                     <tr>
-                        <td rowspan=5>Cap&iacute;tulo 5 - PostgreSQL</td>
-                        <td rowspan=5><a href="curso/modulo3capitulo5.pptx">Slides</a></td>
-                        <td rowspan=5><a target="_blank" rel="noopener noreferrer" href="curso/modulo3lista5.html">Exerc&iacute;cios</a></td>
-                        <td rowspan=5>Respostas</td>
+                        <td rowspan=6>Cap&iacute;tulo 5 - PostgreSQL</td>
+                        <td rowspan=6><a href="curso/modulo3capitulo5.pptx">Slides</a></td>
+                        <td rowspan=6><a target="_blank" rel="noopener noreferrer" href="curso/modulo3lista5.html">Exerc&iacute;cios</a></td>
+                        <td rowspan=6>Respostas</td>
                         <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/luRRrx215dI">Videoaula 01/10/2016</a></td>
 					</tr>
 					<tr>
@@ -202,7 +202,13 @@
 					<tr>
 						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/9nb2ptmM7v8">Videoaula 29/10/2016</a></td>
 					</tr>
-
+					<tr>
+						<td>
+							<a target="_blank" rel="noopener noreferrer" href="https://youtu.be/wbFCqzY5A4o">Videoaula 05/11/2016 (1)</a><br/>
+							<a target="_blank" rel="noopener noreferrer" href="https://youtu.be/QbYHkHEWcyY">Videoaula 05/11/2016 (2)</a>
+						</td>
+					</tr>
+					
                     <!-- avaliacao 2 -->
                     <tr>
                         <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 2</td>
