Atualizando exercicios Lista 3.5

--- a/curso/modulo3lista5.html
+++ b/curso/modulo3lista5.html
@@ -98,7 +98,7 @@ order by s.from_date</code></pre>
    <li>a) Qual o custo total previsto para executar a consulta?</li>
    <li>b) Qual é o gargalo?</li>
    <li>c) Faz sentido criar um índice? Em qual(is) coluna(s)?</li>
-   <li>d) Se você criou o índice proposto no item b), rode o explain novamente. O custo total previsto reduziu? Para quanto?</li>
+   <li>d) Se você criou o índice proposto no item c), rode o explain novamente. O custo total previsto reduziu? Para quanto?</li>
   </ul>
  </body>
 </html>
