--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Posts Recentes</span></h4>
                 <ul class="mh-rp-widget widget-list">
+					<li class="rp-widget-item"><a href="blog/post20161111.html">Instalando PostgreSQL 9.5 ou 9.6 no Debian Jessie</a></li>
 					<li class="rp-widget-item"><a href="blog/post20160928.html">Corrigindo bug "ASP.NET add-in not found" do MonoDevelop no Ubuntu 16.04</a></li>
                     <li class="rp-widget-item"><a href="blog/post20160905.html">Corrigindo ou removendo painéis no KDE Plasma 5</a></li>
                     <li class="rp-widget-item"><a href="blog/post20160502.html">Conectando ao wifi pelo terminal</a></li>
