--- a/modulo3.html
+++ b/modulo3.html
@@ -184,10 +184,10 @@
 
                     <!-- capitulo 5 -->
                     <tr>
-                        <td rowspan=6>Cap&iacute;tulo 5 - PostgreSQL</td>
-                        <td rowspan=6><a href="curso/modulo3capitulo5.pptx">Slides</a></td>
-                        <td rowspan=6><a target="_blank" rel="noopener noreferrer" href="curso/modulo3lista5.html">Exerc&iacute;cios</a></td>
-                        <td rowspan=6>Respostas</td>
+                        <td rowspan=7>Cap&iacute;tulo 5 - PostgreSQL</td>
+                        <td rowspan=7><a href="curso/modulo3capitulo5.pptx">Slides</a></td>
+                        <td rowspan=7><a target="_blank" rel="noopener noreferrer" href="curso/modulo3lista5.html">Exerc&iacute;cios</a></td>
+                        <td rowspan=7>Respostas</td>
                         <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/luRRrx215dI">Videoaula 01/10/2016</a></td>
 					</tr>
 					<tr>
@@ -207,6 +207,9 @@
 							<a target="_blank" rel="noopener noreferrer" href="https://youtu.be/wbFCqzY5A4o">Videoaula 05/11/2016 (1)</a><br/>
 							<a target="_blank" rel="noopener noreferrer" href="https://youtu.be/QbYHkHEWcyY">Videoaula 05/11/2016 (2)</a>
 						</td>
+					</tr>
+					<tr>
+						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/dYHyCT2R7hY">Videoaula 12/11/2016</a></td>
 					</tr>
 					
                     <!-- avaliacao 2 -->
