--- a/modulo3.html
+++ b/modulo3.html
@@ -184,10 +184,10 @@
 
                     <!-- capitulo 5 -->
                     <tr>
-                        <td rowspan=8>Cap&iacute;tulo 5 - PostgreSQL</td>
-                        <td rowspan=8><a href="curso/modulo3capitulo5.pptx">Slides</a></td>
-                        <td rowspan=8><a target="_blank" rel="noopener noreferrer" href="curso/modulo3lista5.html">Exerc&iacute;cios</a></td>
-                        <td rowspan=8>Respostas</td>
+                        <td rowspan=9>Cap&iacute;tulo 5 - PostgreSQL</td>
+                        <td rowspan=9><a href="curso/modulo3capitulo5.pptx">Slides</a></td>
+                        <td rowspan=9><a target="_blank" rel="noopener noreferrer" href="curso/modulo3lista5.html">Exerc&iacute;cios</a></td>
+                        <td rowspan=9><a target="_blank" rel="noopener noreferrer" href="curso/modulo3respostas5.html">Respostas</a></td>
                         <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/luRRrx215dI">Videoaula 01/10/2016</a></td>
 					</tr>
 					<tr>
@@ -213,6 +213,9 @@
 					</tr>
 					<tr>
 						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/wspAkEtNdTk">Videoaula 26/11/2016</a></td>
+					</tr>
+					<tr>
+						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/VA7_yIlOnlU">Videoaula 03/12/2016</a></td>
 					</tr>
 					
                     <!-- avaliacao 2 -->
