--- a/modulo3.html
+++ b/modulo3.html
@@ -221,7 +221,7 @@
                     <!-- avaliacao 2 -->
                     <tr>
                         <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 2</td>
-                        <td rowspan=1>Quest&otilde;es</td>
+                        <td rowspan=1><a target="_blank" rel="noopener noreferrer" href="curso/modulo3prova2.html">Quest&otilde;es</a></td>
                     </tr>
                 </table>
             </article>
